--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,9 @@ include:
   - local: /.gitlab/ci/check.gitlab-ci.yml
   - local: /.gitlab/ci/build.gitlab-ci.yml
   - local: /.gitlab/ci/test.gitlab-ci.yml
-  - local: /.gitlab/ci/docker-build.gitlab-ci.yml
+  - local: /.gitlab/ci/docker-build-base.gitlab-ci.yml
+  - local: /.gitlab/ci/docker-build-api.gitlab-ci.yml
+  - local: /.gitlab/ci/docker-build-web.gitlab-ci.yml
   - local: /.gitlab/ci/docker-scan.gitlab-ci.yml
   - local: /.gitlab/ci/docker-publish.gitlab-ci.yml
   - local: /.gitlab/ci/deploy.gitlab-ci.yml
