--- a/.gitlab/ci/docker-publish.gitlab-ci.yml
+++ b/.gitlab/ci/docker-publish.gitlab-ci.yml
@@ -11,7 +11,7 @@
     - VERSION_TAG=${VERSION_TAG_PREFIX}$(jq -r '.version' ./${APP_PATH}/package.json)
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-    - docker load -i ${BASE_IMAGE}.tar
+    - docker load -i ${VERSION_TAG_PREFIX}${APP_NAME}.tar
     - docker push $CI_REGISTRY_IMAGE/$APP_NAME:$TAG
     - docker push $CI_REGISTRY_IMAGE/$APP_NAME:$VERSION_TAG
 
@@ -33,7 +33,6 @@ preprod_overbookd-api_publish:
     APP_NAME: api
     VERSION_TAG_PREFIX: "next_"
     TAG: "next"
-    BASE_IMAGE: "api"
 
 preprod_overbookd-web_publish:
   extends: .docker-publish
@@ -53,7 +52,6 @@ preprod_overbookd-web_publish:
     APP_NAME: web
     VERSION_TAG_PREFIX: "next_"
     TAG: "next"
-    BASE_IMAGE: "web_next"
 
 prod_overbookd-api_publish:
   extends: .docker-publish
@@ -68,7 +66,6 @@ prod_overbookd-api_publish:
     APP_NAME: api
     VERSION_TAG_PREFIX: ""
     TAG: "latest"
-    BASE_IMAGE: api
 
 prod_overbookd-web_publish:
   extends: .docker-publish
@@ -83,4 +80,3 @@ prod_overbookd-web_publish:
     APP_NAME: web
     VERSION_TAG_PREFIX: ""
     TAG: "latest"
-    BASE_IMAGE: "web_prod"
