--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.0.36",
+  "version": "3.0.37",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -28,9 +28,8 @@
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
     "start": "nuxi start",
-    "test:unit": "echo 'No tests'",
-    "test:unit:ci": "echo 'No tests'",
-    "test:watch": "echo 'No tests'"
+    "test:unit": "vitest --config ../../vitest.config.ts",
+    "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
@@ -58,6 +57,7 @@
     "@overbookd/user": "workspace:*",
     "@overbookd/volunteer-availability": "workspace:*",
     "chart.js": "4.4.3",
+    "csv-parse": "5.5.6",
     "jwt-decode": "4.0.0",
     "pinia": "2.1.7",
     "sass": "1.77.6",
