--- a/domains/registration/package.json
+++ b/domains/registration/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/registration",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Gestion de l'inscription des utilisateurs pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -58,10 +58,7 @@
     "@overbookd/period": "workspace:^",
     "@overbookd/permission": "workspace:^",
     "@overbookd/team": "workspace:^",
-    "jsonwebtoken": "9.0.2",
+    "jose": "5.4.1",
     "jwt-decode": "4.0.0"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "9.0.6"
   }
 }
