feat(web): add fa approval & rejection #2028

--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -30,7 +30,8 @@
         "SwitchCase": 1,
         "ignoredNodes": [
           "PropertyDefinition",
-          "ArrowFunctionExpression > ArrowFunctionExpression"
+          "ArrowFunctionExpression > ArrowFunctionExpression",
+          "ConditionalExpression > CallExpression"
         ]
       }
     ],
