--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -43,7 +43,7 @@ LABEL org.24heures.overbookd.image.title="Overbookd-web" \
   org.24heures.overbookd.image.authors="https://gitlab.com/24-heures-insa/overbookd-mono/-/graphs/main" \
   org.24heures.overbookd.image.version=${WEB_VERSION}
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 WORKDIR /app
 
