--- a/.gitlab/ci/docker-build-base.gitlab-ci.yml
+++ b/.gitlab/ci/docker-build-base.gitlab-ci.yml
@@ -37,8 +37,6 @@
     - OVERBOOKD_VERSION=$(jq -r '.version' package.json | tr -d '"')
     - echo $OVERBOOKD_VERSION
   script:
-    - '[ -n "$CI_COMMIT_BRANCH" ] && VERSION_TAG_PREFIX="next_" || VERSION_TAG_PREFIX=""'
-    - '[ -n "$CI_COMMIT_BRANCH" ] && TAG="next" || TAG="latest"'
     - '[ -n "$CI_COMMIT_BRANCH" ] && BASE_URL=$BASE_URL_PREPROD ||  BASE_URL=$BASE_URL_PROD'
     - docker load -i ${APP_NAME}_installer.tar
     - >
@@ -46,8 +44,8 @@
       --cache-from $CI_REGISTRY_IMAGE/$APP_NAME:installer
       --tag $CI_REGISTRY_IMAGE/$APP_NAME:latest
       --tag $CI_REGISTRY_IMAGE/$APP_NAME:$VERSION
-      --tag $CI_REGISTRY_IMAGE/$APP_NAME:$TAG
-      --tag $CI_REGISTRY_IMAGE/$APP_NAME:$VERSION_TAG_PREFIX$VERSION
+      --tag $CI_REGISTRY_IMAGE/$APP_NAME:pre-prod
+      --tag $CI_REGISTRY_IMAGE/$APP_NAME:pre-prod_$VERSION
       --tag $CI_REGISTRY_IMAGE/$APP_NAME:$CI_COMMIT_SHORT_SHA
       --build-arg BASE_URL=$BASE_URL
       --build-arg API_VERSION=$VERSION
@@ -55,15 +53,15 @@
       --build-arg OVERBOOKD_VERSION=$OVERBOOKD_VERSION
       --file $APP_PATH/Dockerfile .
     - >
-      docker save -o ${VERSION_TAG_PREFIX}${APP_NAME}.tar
+      docker save -o ${APP_NAME}.tar
       ${CI_REGISTRY_IMAGE}/${APP_NAME}:latest
       ${CI_REGISTRY_IMAGE}/${APP_NAME}:${VERSION}
-      ${CI_REGISTRY_IMAGE}/${APP_NAME}:${TAG}
-      ${CI_REGISTRY_IMAGE}/${APP_NAME}:${VERSION_TAG_PREFIX}${VERSION}
+      ${CI_REGISTRY_IMAGE}/${APP_NAME}:pre-prod
+      ${CI_REGISTRY_IMAGE}/${APP_NAME}:pre-prod_${VERSION}
   after_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker push $CI_REGISTRY_IMAGE/$APP_NAME:$CI_COMMIT_SHORT_SHA
   artifacts:
     paths:
-      - ${VERSION_TAG_PREFIX}${APP_NAME}.tar
+      - ${APP_NAME}.tar
     expire_in: 1 hour
