--- a/apps/old-web/Dockerfile
+++ b/apps/old-web/Dockerfile
@@ -53,7 +53,7 @@ LABEL org.24heures.overbookd.image.title="Overbookd-old-web" \
   org.24heures.overbookd.image.authors="https://gitlab.com/24-heures-insa/overbookd-mono/-/graphs/main" \
   org.24heures.overbookd.image.version=${OLD_WEB_VERSION}
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
 
 WORKDIR /app
 
