--- a/utils/configuration/tsconfig.json
+++ b/utils/configuration/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "../../tsconfig.cross-modules-import.json",
+    "../../tsconfig.all-modules-import.json",
     "../../tsconfig.package.json"
   ],
   "include": ["src"],
