--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.20.24",
+  "version": "2.20.25",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -51,27 +51,28 @@
     "@nestjs/platform-express": "10.3.10",
     "@nestjs/swagger": "7.4.0",
     "@nestjs/throttler": "5.2.0",
-    "@overbookd/alerts": "workspace:^",
-    "@overbookd/assignment": "workspace:^",
-    "@overbookd/configuration": "workspace:^",
-    "@overbookd/contribution": "workspace:^",
-    "@overbookd/domain-events": "workspace:^",
-    "@overbookd/festival-event": "workspace:^",
-    "@overbookd/festival-event-constants": "workspace:^",
-    "@overbookd/geo-location": "workspace:^",
-    "@overbookd/http": "workspace:^",
-    "@overbookd/list": "workspace:^",
-    "@overbookd/logistic": "workspace:^",
-    "@overbookd/period": "workspace:^",
-    "@overbookd/permission": "workspace:^",
-    "@overbookd/personal-account": "workspace:^",
-    "@overbookd/planning": "workspace:^",
-    "@overbookd/registration": "workspace:^",
-    "@overbookd/signa": "workspace:^",
-    "@overbookd/slugify": "workspace:^",
-    "@overbookd/team": "workspace:^",
-    "@overbookd/user": "workspace:^",
-    "@overbookd/volunteer-availability": "workspace:^",
+    "@overbookd/alerts": "workspace:*",
+    "@overbookd/assignment": "workspace:*",
+    "@overbookd/configuration": "workspace:*",
+    "@overbookd/contribution": "workspace:*",
+    "@overbookd/domain-events": "workspace:*",
+    "@overbookd/festival-event": "workspace:*",
+    "@overbookd/festival-event-constants": "workspace:*",
+    "@overbookd/geo-location": "workspace:*",
+    "@overbookd/http": "workspace:*",
+    "@overbookd/list": "workspace:*",
+    "@overbookd/logistic": "workspace:*",
+    "@overbookd/period": "workspace:*",
+    "@overbookd/permission": "workspace:*",
+    "@overbookd/personal-account": "workspace:*",
+    "@overbookd/planning": "workspace:*",
+    "@overbookd/registration": "workspace:*",
+    "@overbookd/signa": "workspace:*",
+    "@overbookd/slugify": "workspace:*",
+    "@overbookd/team": "workspace:*",
+    "@overbookd/team-constants": "workspace:*",
+    "@overbookd/user": "workspace:*",
+    "@overbookd/volunteer-availability": "workspace:*",
     "@prisma/client": "5.16.1",
     "bcrypt": "5.1.1",
     "body-parser": "1.20.2",
