--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.0.90",
+  "version": "3.0.91",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -55,6 +55,7 @@
     "@overbookd/signa": "workspace:*",
     "@overbookd/slugify": "workspace:*",
     "@overbookd/team": "workspace:*",
+    "@overbookd/team-constants": "workspace:*",
     "@overbookd/user": "workspace:*",
     "@overbookd/volunteer-availability": "workspace:*",
     "chart.js": "4.4.3",
