--- a/constants/team-constants/package.json
+++ b/constants/team-constants/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@overbookd/team",
-  "version": "1.1.0",
-  "description": "Gestion des équipes pour overbookd",
+  "name": "@overbookd/team-constants",
+  "version": "1.2.0",
+  "description": "Gestion des constantes des équipes pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "constants/team"
+    "directory": "constants/team-constants"
   },
   "type": "module",
   "exports": {
