--- a/domains/assignment/package.json
+++ b/domains/assignment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/assignment",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Gestion de l'affectation pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -57,6 +57,6 @@
     "@overbookd/festival-event-constants": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/period": "workspace:*",
-    "@overbookd/team": "workspace:*"
+    "@overbookd/team-constants": "workspace:*"
   }
 }
