--- a/domains/personal-account/package.json
+++ b/domains/personal-account/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/personal-account",
-  "version": "1.5.5",
+  "version": "1.5.6",
   "description": "Gestion des consommations des bénévoles pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -57,8 +57,8 @@
     "pnpm": "9.4.0"
   },
   "dependencies": {
-    "@overbookd/list": "workspace:^",
-    "@overbookd/permission": "workspace:^",
-    "@overbookd/slugify": "workspace:^"
+    "@overbookd/list": "workspace:*",
+    "@overbookd/permission": "workspace:*",
+    "@overbookd/slugify": "workspace:*"
   }
 }
