--- a/domains/registration/package.json
+++ b/domains/registration/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/registration",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "Gestion de l'inscription des utilisateurs pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -53,11 +53,11 @@
     "pnpm": "9.4.0"
   },
   "dependencies": {
-    "@overbookd/event": "workspace:^",
-    "@overbookd/list": "workspace:^",
-    "@overbookd/period": "workspace:^",
-    "@overbookd/permission": "workspace:^",
-    "@overbookd/team": "workspace:^",
+    "@overbookd/event": "workspace:*",
+    "@overbookd/list": "workspace:*",
+    "@overbookd/period": "workspace:*",
+    "@overbookd/permission": "workspace:*",
+    "@overbookd/team-constants": "workspace:*",
     "jose": "5.6.3",
     "jwt-decode": "4.0.0"
   }
