--- a/tsconfig.cross-modules-import.json
+++ b/tsconfig.cross-modules-import.json
@@ -9,7 +9,7 @@
       "@overbookd/period": ["./libraries/period/src"],
       "@overbookd/permission": ["./constants/permission/src"],
       "@overbookd/slugify": ["./libraries/slugify/src"],
-      "@overbookd/team": ["./constants/team/src"]
+      "@overbookd/team-constants": ["./constants/team-constants/src"]
     }
   }
 }
