--- a/utils/alerts/package.json
+++ b/utils/alerts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/alerts",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Utilitaire pour les alertes d'overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -46,8 +46,8 @@
     "test:unit:ci": "echo 'No tests'"
   },
   "dependencies": {
-    "@overbookd/contribution": "workspace:^",
-    "@overbookd/personal-account": "workspace:^",
+    "@overbookd/contribution": "workspace:*",
+    "@overbookd/personal-account": "workspace:*",
     "rxjs": "7.8.1"
   },
   "keywords": [
