--- a/utils/http/package.json
+++ b/utils/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/http",
-  "version": "1.2.12",
+  "version": "1.2.13",
   "description": "Utilitaire pour les requêtes HTTP",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -50,15 +50,15 @@
     "utils"
   ],
   "dependencies": {
-    "@overbookd/assignment": "workspace:^",
-    "@overbookd/festival-event": "workspace:^",
-    "@overbookd/festival-event-constants": "workspace:^",
-    "@overbookd/logistic": "workspace:^",
-    "@overbookd/period": "workspace:^",
-    "@overbookd/personal-account": "workspace:^",
-    "@overbookd/registration": "workspace:^",
-    "@overbookd/signa": "workspace:^",
-    "@overbookd/user": "workspace:^"
+    "@overbookd/assignment": "workspace:*",
+    "@overbookd/festival-event": "workspace:*",
+    "@overbookd/festival-event-constants": "workspace:*",
+    "@overbookd/logistic": "workspace:*",
+    "@overbookd/period": "workspace:*",
+    "@overbookd/personal-account": "workspace:*",
+    "@overbookd/registration": "workspace:*",
+    "@overbookd/signa": "workspace:*",
+    "@overbookd/user": "workspace:*"
   },
   "engines": {
     "node": "20.15.0",
