--- a/utils/team/package.json
+++ b/utils/team/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@overbookd/domain-events",
-  "version": "1.1.8",
-  "description": "Utilitaire pour les évènements métier d'overbookd",
+  "name": "@overbookd/team",
+  "version": "1.0.0",
+  "description": "Gestion des équipes pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "utils/domain-events"
+    "directory": "utils/team"
   },
   "type": "module",
   "exports": {
@@ -45,16 +45,8 @@
     "test:unit": "echo 'No tests'",
     "test:unit:ci": "echo 'No tests'"
   },
-  "dependencies": {
-    "@overbookd/event": "workspace:*",
-    "@overbookd/festival-event": "workspace:*",
-    "@overbookd/personal-account": "workspace:*",
-    "@overbookd/registration": "workspace:*",
-    "rxjs": "7.8.1"
-  },
   "keywords": [
-    "domain-events",
-    "utils"
+    "team"
   ],
   "engines": {
     "node": "20.15.0",
