--- a/utils/team/tsconfig.build.json
+++ b/utils/team/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "../../tsconfig.cross-modules-import.json",
+    "../../tsconfig.all-modules-import.json",
     "../../tsconfig.build.json"
   ],
   "compilerOptions": {
