--- a/utils/user/package.json
+++ b/utils/user/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@overbookd/configuration",
-  "version": "1.1.0",
-  "description": "Gestion de la configuration pour overbookd",
+  "name": "@overbookd/user",
+  "version": "1.3.0",
+  "description": "Gestion des utilisateurs pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "domains/configuration"
+    "directory": "utils/user"
   },
   "type": "module",
   "exports": {
@@ -46,11 +46,13 @@
     "test:unit:ci": "echo 'No tests'"
   },
   "keywords": [
-    "configuration",
-    "domain"
+    "user"
   ],
   "engines": {
     "node": "20.15.0",
     "pnpm": "9.4.0"
+  },
+  "dependencies": {
+    "@overbookd/permission": "workspace:*"
   }
 }
