--- a/.gitlab/ci/check.gitlab-ci.yml
+++ b/.gitlab/ci/check.gitlab-ci.yml
@@ -15,6 +15,8 @@ include:
       when: always
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
       when: always
+    - if: '$CI_COMMIT_BRANCH == "main"'
+      when: always
     - when: never
 
 gemnasium-dependency_scanning:
