--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.0.105",
+  "version": "3.0.106",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -75,7 +75,8 @@
     "eslint-plugin-vue": "9.27.0",
     "nuxt": "3.12.3",
     "vue": "3.4.31",
-    "vue-router": "4.4.0"
+    "vue-router": "4.4.0",
+    "vue-tsc": "2.0.26"
   },
   "engines": {
     "node": "20.15.1",
