--- a/domains/charisma/package.json
+++ b/domains/charisma/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/charisma",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Gestion du charisme pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -42,8 +42,8 @@
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
-    "test:unit": "echo 'No tests'",
-    "test:unit:ci": "echo 'No tests'"
+    "test:unit": "vitest --config ../../vitest.config.ts",
+    "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
   },
   "keywords": [
     "charisma"
@@ -51,5 +51,9 @@
   "engines": {
     "node": "20.15.1",
     "pnpm": "9.5.0"
+  },
+  "dependencies": {
+    "@overbookd/slugify": "workspace:*",
+    "@overbookd/user": "workspace:*"
   }
 }
