--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.0.123",
+  "version": "3.1.0",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -62,6 +62,7 @@
     "chart.js": "4.4.3",
     "csv-parse": "5.5.6",
     "jwt-decode": "4.0.0",
+    "mobile-detect": "1.4.5",
     "pinia": "2.2.0",
     "sass": "1.77.8",
     "vite-plugin-vuetify": "2.0.3",
