--- a/domains/charisma/package.json
+++ b/domains/charisma/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/charisma",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Gestion du charisme pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -53,6 +53,7 @@
     "pnpm": "9.6.0"
   },
   "dependencies": {
+    "@overbookd/period": "workspace:*",
     "@overbookd/slugify": "workspace:*",
     "@overbookd/user": "workspace:*"
   }
