--- a/domains/logistic/package.json
+++ b/domains/logistic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/logistic",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Gestion de la logistique pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -55,6 +55,7 @@
     "pnpm": "9.6.0"
   },
   "dependencies": {
+    "@overbookd/date": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/period": "workspace:*"
   }
