--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -6,6 +6,7 @@
       "@overbookd/charisma": ["./domains/charisma/src"],
       "@overbookd/contribution": ["./domains/contribution/src"],
       "@overbookd/configuration": ["./utils/configuration/src"],
+      "@overbookd/date": ["./libraries/date/src"],
       "@overbookd/domain-events": ["./utils/domain-events/src"],
       "@overbookd/event": ["./libraries/event/src"],
       "@overbookd/festival-event": ["./domains/festival-event/src"],
