--- a/tsconfig.cross-modules-import.json
+++ b/tsconfig.cross-modules-import.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
+      "@overbookd/date": ["./libraries/date/src"],
       "@overbookd/event": ["./libraries/event/src"],
       "@overbookd/festival-event-constants": [
         "./constants/festival-event-constants/src"
