--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/api",
-  "version": "2.20.43",
+  "version": "2.20.44",
   "description": "API pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -56,6 +56,7 @@
     "@overbookd/configuration": "workspace:*",
     "@overbookd/charisma": "workspace:*",
     "@overbookd/contribution": "workspace:*",
+    "@overbookd/date": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
     "@overbookd/festival-event-constants": "workspace:*",
