--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -39,6 +39,7 @@
     "@overbookd/charisma": "workspace:*",
     "@overbookd/configuration": "workspace:*",
     "@overbookd/contribution": "workspace:*",
+    "@overbookd/date": "workspace:*",
     "@overbookd/domain-events": "workspace:*",
     "@overbookd/event": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
