--- a/domains/volunteer-availability/package.json
+++ b/domains/volunteer-availability/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/volunteer-availability",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Gestion des disponibilités des bénévoles pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -54,6 +54,7 @@
     "pnpm": "9.6.0"
   },
   "dependencies": {
+    "@overbookd/date": "workspace:*",
     "@overbookd/list": "workspace:*",
     "@overbookd/period": "workspace:*"
   }
