--- a/libraries/date/package.json
+++ b/libraries/date/package.json
@@ -1,20 +1,11 @@
 {
-  "name": "@overbookd/assignment",
-  "version": "1.3.2",
-  "description": "Gestion de l'affectation pour overbookd",
+  "name": "@overbookd/date",
+  "version": "1.0.0",
+  "description": "Gestion des dates pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
   "private": true,
-  "bugs": {
-    "url": "https://gitlab.com/24-heures-insa/overbookd-mono/-/issues/new",
-    "email": "contact-project+24-heures-insa-overbookd-mono-31598236-issue-@incoming.gitlab.com"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "domains/assignment"
-  },
   "type": "module",
   "exports": {
     ".": {
@@ -33,6 +24,15 @@
   "files": [
     "dist"
   ],
+  "bugs": {
+    "url": "https://gitlab.com/24-heures-insa/overbookd-mono/-/issues/new",
+    "email": "contact-project+24-heures-insa-overbookd-mono-31598236-issue-@incoming.gitlab.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
+    "directory": "libraries/date"
+  },
   "scripts": {
     "build": "tsup",
     "build:ci": "pnpm build",
@@ -46,17 +46,13 @@
     "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
   },
   "keywords": [
-    "assignment",
-    "domain"
+    "date"
   ],
   "engines": {
     "node": "20.16.0",
     "pnpm": "9.6.0"
   },
   "dependencies": {
-    "@overbookd/festival-event-constants": "workspace:*",
-    "@overbookd/list": "workspace:*",
-    "@overbookd/period": "workspace:*",
-    "@overbookd/team-constants": "workspace:*"
+    "@overbookd/period": "workspace:*"
   }
 }
