--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.1.29",
+  "version": "3.1.30",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -60,6 +60,7 @@
     "@overbookd/team-constants": "workspace:*",
     "@overbookd/user": "workspace:*",
     "@overbookd/volunteer-availability": "workspace:*",
+    "@overbookd/web-page": "workspace:*",
     "chart.js": "4.4.3",
     "csv-parse": "5.5.6",
     "jwt-decode": "4.0.0",
