--- a/constants/web-page/package.json
+++ b/constants/web-page/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@overbookd/contribution",
-  "version": "1.2.4",
-  "description": "Gestion des contributions pour overbookd",
+  "name": "@overbookd/web-page",
+  "version": "1.0.0",
+  "description": "Liste des pages web disponibles sur overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "domains/contribution"
+    "directory": "constants/web-page"
   },
   "type": "module",
   "exports": {
@@ -42,20 +42,15 @@
     "version:major": "pnpm version major --commit-hooks=false --git-tag-version=false",
     "version:minor": "pnpm version minor --commit-hooks=false --git-tag-version=false",
     "version:patch": "pnpm version patch --commit-hooks=false --git-tag-version=false",
-    "test:unit": "vitest --config ../../vitest.config.ts",
-    "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
+    "test:unit": "echo 'No tests'",
+    "test:unit:ci": "echo 'No tests'"
   },
   "keywords": [
-    "contribution",
-    "domain"
+    "web",
+    "pages"
   ],
   "engines": {
     "node": "20.16.0",
     "pnpm": "9.7.0"
-  },
-  "dependencies": {
-    "@overbookd/list": "workspace:*",
-    "@overbookd/period": "workspace:*",
-    "@overbookd/permission": "workspace:*"
   }
 }
