--- a/tsconfig.cross-modules-import.json
+++ b/tsconfig.cross-modules-import.json
@@ -10,7 +10,8 @@
       "@overbookd/period": ["./libraries/period/src"],
       "@overbookd/permission": ["./constants/permission/src"],
       "@overbookd/slugify": ["./libraries/slugify/src"],
-      "@overbookd/team-constants": ["./constants/team-constants/src"]
+      "@overbookd/team-constants": ["./constants/team-constants/src"],
+      "@overbookd/web-page": ["./constants/web-page/src"]
     }
   }
 }
