--- a/utils/http/package.json
+++ b/utils/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/http",
-  "version": "1.2.33",
+  "version": "1.2.34",
   "description": "Utilitaire pour les requêtes HTTP",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -59,7 +59,8 @@
     "@overbookd/personal-account": "workspace:*",
     "@overbookd/registration": "workspace:*",
     "@overbookd/signa": "workspace:*",
-    "@overbookd/user": "workspace:*"
+    "@overbookd/user": "workspace:*",
+    "@overbookd/web-page": "workspace:*"
   },
   "engines": {
     "node": "20.16.0",
