--- a/renovate.json
+++ b/renovate.json
@@ -113,16 +113,6 @@
       "matchDatasources": ["npm"],
       "versioning": "npm",
       "minimumReleaseAge": "3 days"
-    },
-    {
-      "matchFileNames": ["apps/old-web/**"],
-      "matchPackageNames": [
-        "nuxt",
-        "@nuxt/typescript-build",
-        "@nuxtjs/color-mode",
-        "vue"
-      ],
-      "allowedVersions": "<3"
     }
   ],
   "customManagers": [
@@ -132,7 +122,7 @@
       "datasourceTemplate": "npm",
       "fileMatch": [
         "^\\.gitlab/ci/.*\\.gitlab-ci.ya?ml$",
-        "^apps/.*/[Dd]ockerfile$",
+        "^apps/(?!old-web/).*/[Dd]ockerfile$",
         "^docker/[Dd]ockerfile$"
       ],
       "matchStrings": [
