--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev:init": "docker network create traefik-public && pnpm dev:build",
     "dev:logs": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env logs --tail 100 --follow",
     "dev:restart": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env restart",
-    "dev:start": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env up --detach certs-downloader traefik api postgresql adminer web",
+    "dev:start": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env up --detach certs-downloader traefik api postgresql adminer mail_catcher web",
     "dev:stop": "MY_GID=$(id -g $USER) MY_UID=$(id -u $USER) docker compose --file ./docker/docker-compose.yml --project-name overbookd --env-file ./docker/.env stop",
     "dev:sync-version": " echo 'Restarting docker containers if running to sync overbookd version' && ((docker restart overbookd_web overbookd_api || true) &)",
     "format": "pnpm --recursive run format",
