--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/web",
-  "version": "3.1.41",
+  "version": "3.1.42",
   "description": "Application web pour le logiciel de gestion du festival des 24 heures de l'INSA",
   "author": "Club des 24 heures de l'INSA (https://www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -64,12 +64,12 @@
     "csv-parse": "5.5.6",
     "jwt-decode": "4.0.0",
     "pinia": "2.2.2",
+    "quill": "2.0.2",
     "sass": "1.77.8",
     "vite-plugin-vuetify": "2.0.4",
     "vue-chartjs": "5.3.1",
     "vue-html-secure": "1.0.10",
-    "vuetify": "3.7.0",
-    "vuetify-pro-tiptap": "2.5.3"
+    "vuetify": "3.7.0"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "0.5.0",
