--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -61,8 +61,10 @@
     "@overbookd/volunteer-availability": "workspace:*",
     "@overbookd/web-page": "workspace:*",
     "chart.js": "4.4.4",
+    "chartjs-adapter-luxon": "1.3.1",
     "csv-parse": "5.5.6",
     "jwt-decode": "4.0.0",
+    "luxon": "3.5.0",
     "pinia": "2.2.4",
     "quill": "2.0.2",
     "sass": "1.79.4",
