--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,7 +12,8 @@
           { "type": "refactor", "release": "patch" },
           { "type": "perf", "release": "patch" },
           { "type": "test", "release": "patch" },
-          { "type": "prefeat", "release": "patch" }
+          { "type": "prefeat", "release": "patch" },
+          { "breaking": true, "release": "major" }
         ],
         "parserOpts": {
           "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "NEW EDITION"]
