--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overbookd",
-  "version": "2.37.0",
+  "version": "3.0.0-rc.183",
   "main": "index.js",
   "keywords": [],
   "license": "Apache-2.0",
