feat(access-manager): grant permission to team. #2155
Reviewed-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Approved-by: Titouan-Joseph CICORELLA <titouanjoseph@gmail.com>
Co-authored-by: 24-bot <dsi@24heures.org>

--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
+      "@overbookd/access-manager": ["./domains/access-manager/src"],
       "@overbookd/alerts": ["./utils/alerts/src"],
       "@overbookd/assignment": ["./domains/assignment/src"],
       "@overbookd/charisma": ["./domains/charisma/src"],
