--- a/domains/access-manager/package.json
+++ b/domains/access-manager/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@overbookd/contribution",
-  "version": "1.2.12",
-  "description": "Gestion des contributions pour overbookd",
+  "name": "@overbookd/access-manager",
+  "version": "1.0.0",
+  "description": "Gestion d'access pour overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
   "license": "Apache-2.0",
@@ -13,7 +13,7 @@
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/24-heures-insa/overbookd-mono",
-    "directory": "domains/contribution"
+    "directory": "domains/access-manager"
   },
   "type": "module",
   "exports": {
@@ -46,7 +46,7 @@
     "test:unit:ci": "vitest --config ../../vitest-ci.config.ts --watch=false"
   },
   "keywords": [
-    "contribution",
+    "access-manager",
     "domain"
   ],
   "engines": {
@@ -54,8 +54,8 @@
     "pnpm": "9.11.0"
   },
   "dependencies": {
+    "@overbookd/event": "workspace:*",
     "@overbookd/list": "workspace:*",
-    "@overbookd/permission": "workspace:*",
-    "@overbookd/time": "workspace:*"
+    "@overbookd/permission": "workspace:*"
   }
 }
