--- a/.gitlab/ci/docker-scan.gitlab-ci.yml
+++ b/.gitlab/ci/docker-scan.gitlab-ci.yml
@@ -25,10 +25,10 @@ overbookd-web_scan:
   variables:
     APP_NAME: web
     APP_PATH: apps/web
-    CS_IMAGE: $CI_REGISTRY_IMAGE/$APP_NAME:$CI_COMMIT_SHORT_SHA
+    CS_IMAGE: $CI_REGISTRY_IMAGE/$APP_NAME:${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}
     CS_DOCKERFILE_PATH: $APP_PATH/Dockerfile
   after_script:
-    - 'curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" --request "DELETE" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/registry/repositories/4375993/tags/$CI_COMMIT_SHORT_SHA"'
+    - 'curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" --request "DELETE" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/registry/repositories/4375993/tags/${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}"'
 
 overbookd-api_scan:
   extends: container_scanning
@@ -47,7 +47,7 @@ overbookd-api_scan:
   variables:
     APP_NAME: api
     APP_PATH: apps/api
-    CS_IMAGE: $CI_REGISTRY_IMAGE/$APP_NAME:$CI_COMMIT_SHORT_SHA
+    CS_IMAGE: $CI_REGISTRY_IMAGE/$APP_NAME:${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}
     CS_DOCKERFILE_PATH: $APP_PATH/Dockerfile
   after_script:
-    - 'curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" --request "DELETE" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/registry/repositories/4375990/tags/$CI_COMMIT_SHORT_SHA"'
+    - 'curl --header "PRIVATE-TOKEN: $GITLAB_API_TOKEN" --request "DELETE" "https://gitlab.com/api/v4/projects/$CI_PROJECT_ID/registry/repositories/4375990/tags/${CI_COMMIT_SHORT_SHA}${CI_COMMIT_TAG}"'
