--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,9 +50,9 @@
   // "forwardPorts": [],
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": {
-    "pre-commit-installation": "pip install pre-commit && pre-commit install --install-hooks --overwrite && pre-commit install --hook-type commit-msg",
-    "pnpm-autocompletion-bash": "pnpm install-completion bash",
-    "pnpm-autocompletion-zsh": "pnpm install-completion zsh"
+    "pre-commit-installation": "pre-commit install --install-hooks --overwrite && pre-commit install --hook-type commit-msg",
+    "pnpm-autocompletion-bash": "pnpm completion bash > ~/completion-for-pnpm.bash && echo 'source ~/completion-for-pnpm.bash' >> ~/.bashrc",
+    "pnpm-autocompletion-zsh": "pnpm completion zsh > ~/completion-for-pnpm.zsh && echo 'source ~/completion-for-pnpm.zsh' >> ~/.zshrc"
   },
   "postStartCommand": {
     "delete-my-uid-in-dot-env": "sed -i '/^MY_UID=[0-9]\\+/d' ./docker/.env",
