--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -65,6 +65,7 @@
     "csv-parse": "5.5.6",
     "jwt-decode": "4.0.0",
     "luxon": "3.5.0",
+    "nanoid": "5.0.7",
     "pinia": "2.2.4",
     "quill": "2.0.2",
     "sass": "1.80.2",
