chore: add missing dependency. #2155

--- a/utils/domain-events/package.json
+++ b/utils/domain-events/package.json
@@ -46,6 +46,7 @@
     "test:unit:ci": "echo 'No tests'"
   },
   "dependencies": {
+    "@overbookd/access-manager": "workspace:*",
     "@overbookd/event": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
     "@overbookd/personal-account": "workspace:*",
