--- a/utils/domain-events/package.json
+++ b/utils/domain-events/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@overbookd/domain-events",
-  "version": "1.1.56",
+  "version": "1.1.57",
   "description": "Utilitaire pour les évènements métier d'overbookd",
   "author": "Club des 24 heures de l'INSA (https: //www.24heures.org/)",
   "homepage": "https://gitlab.com/24-heures-insa/overbookd-mono",
@@ -46,6 +46,7 @@
     "test:unit:ci": "echo 'No tests'"
   },
   "dependencies": {
+    "@overbookd/access-manager": "workspace:*",
     "@overbookd/event": "workspace:*",
     "@overbookd/festival-event": "workspace:*",
     "@overbookd/personal-account": "workspace:*",
