fix(shared-meal): use DateString instead of JS Date to create one #2301

--- a/domains/personal-account/package.json
+++ b/domains/personal-account/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@overbookd/list": "workspace:*",
     "@overbookd/permission": "workspace:*",
-    "@overbookd/slugify": "workspace:*"
+    "@overbookd/slugify": "workspace:*",
+    "@overbookd/time": "workspace:*"
   }
 }
