--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-security": "3.0.1",
     "eslint-plugin-unused-imports": "4.1.4",
+    "eslint-plugin-vue": "9.32.0",
     "prettier": "3.4.2",
     "semantic-release": "24.2.1",
     "ts-prune": "0.10.3",
     "tsup": "8.3.6",
     "typescript": "5.7.3",
     "typescript-eslint": "8.23.0",
-    "vitest": "3.0.5"
+    "vitest": "3.0.5",
+    "vue-eslint-parser": "9.4.3"
   }
 }
