fix: allow some dependencies to execut script

--- a/package.json
+++ b/package.json
@@ -49,7 +49,14 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "bcrypt"
+      "@nestjs/core",
+      "@parcel/watcher",
+      "@prisma/client",
+      "@prisma/engines",
+      "bcrypt",
+      "esbuild",
+      "prisma",
+      "vue-demi"
     ]
   },
   "devDependencies": {
