feat(libs): add pdf-book lib #2432

--- a/tsconfig.all-modules-import.json
+++ b/tsconfig.all-modules-import.json
@@ -18,6 +18,7 @@
       "@overbookd/list": ["./libraries/list/src"],
       "@overbookd/logistic": ["./domains/logistic/src"],
       "@overbookd/money": ["./libraries/money/src"],
+      "@overbookd/pdf-book": ["./libraries/pdf-book/src"],
       "@overbookd/permission": ["./constants/permission/src"],
       "@overbookd/personal-account": ["./domains/personal-account/src"],
       "@overbookd/planning": ["./domains/planning/src"],
